--- a/templates/pages/delivery.html
+++ b/templates/pages/delivery.html
@@ -6,7 +6,7 @@
 
 <!-- Доставка Екатеринбург начало -->
 
-<div class="container text_content_container info_pages_text">
+<div class="container text_content_container info_pages_text min_height">
     <p>В г. Екатеринбург вы можете получить ваш заказ 2 способами:</p>
     <ul>
         <li>оформить бесплатно самовывоз из нашего магазина по адресу:  ул. 8 Марта д. 46, ТЦ Гринвич, 2 очередь, 2 этаж, бутик  212  </li>
