--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -9,11 +9,11 @@
     <div class="container first_page__title">
         <p class="title_second">Новая коллекция одежды</p>
         <div class="link_new_collection">
-            <a href="catalog_new_collection.html" class="title_first">осень/зима 2024</a>
-            <a href="catalog_new_collection.html">
+            <a href="catalog_new_collection.html" class="title_first">осень/зима <nobr>2024
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none" class="new_collection_arrow">
                     <path d="M25 42.5L37.5 30L25 17.5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
+                </nobr>
             </a>
         </div>
         <div class="link_catalog">
@@ -226,6 +226,11 @@
 
     <!-- Карточка товара конец -->
 
+    <div class="learn_more_mobile">
+        <p class="main_text_addit_dark">Выбор наших<br>опокупателей</p>
+        <a href="blog.html" class="main_text_contrast underline">Смотреть все хиты</a>
+    </div>
+
     </div>
 
     <a href="catalog_our_hits.html" class="main_text_contrast link_all_hits">Смотреть все хиты</a>
@@ -277,7 +282,7 @@
         </a>
     </div>
 
-    <div class="main_page_banners__row">
+    <div class="main_page_banners__row sale">
         <a href="catalog_evening_clothes.html" class="main_page_small_banner evening_wear">
             <p class="title_first_light evening_wear_title">вечерняя одежда</p>
         </a>
@@ -286,6 +291,18 @@
         </a>
     </div>
 
+    <!-- Баннеры мобильной версии начало -->
+
+    <a href="total_looks.html" class="main_page_banner__mobile total_looks_mobile">
+        <p class="title_first_light total_looks_title">готовые образы</p>
+    </a>
+
+    <a href="catalog_evening_clothes.html" class="main_page_banner__mobile sale_mobile">
+        <p class="title_first sale_title">скидки до 70%</p>
+    </a>
+
+
+    <!-- Баннеры мобильной версии конец -->
 
 </div>
 
@@ -310,7 +327,7 @@
         <div class="post">
             <div class="post__foto post-2"></div>
             <div class="post__text">
-                <div class="main_text_title post_title">как ухаживать за кашемировым свитером</div>
+                <div class="main_text_title post_title">Как ухаживать за кашемировым свитером</div>
                 <div class="main_text post_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est incidunt debitis facilis! Facere nam dolorum itaque, numquam distinctio ducimus ea et rerum odit repudiandae quidem minima quo mollitia est voluptates reprehenderit aut repellendus officiis at provident consectetur voluptatum cupiditate consequatur incidunt. Delectus placeat, in autem necessitatibus blanditiis facilis ratione quas! </div>
                 <a href="blog.html#article-3" class="main_text link_post">Читать статью</a>
             </div>
@@ -334,9 +351,14 @@
             </div>
         </div>
 
+        <div class="learn_more_mobile">
+            <p class="main_text_addit_dark">Интересные статьи<br>от экспертов моды</p>
+            <a href="blog.html" class="main_text_contrast underline">Читать все статьи</a>
+        </div>
+
     </div>
 
-    <a href="blog.html" class="main_text_contrast">Читать все статьи</a>
+    <a href="blog.html" class="main_text_contrast read_more">Читать все статьи</a>
 </div>
 
 <!-- Блог конец -->
