--- a/templates/pages/main+dropdown_women.html
+++ b/templates/pages/main+dropdown_women.html
@@ -1,6 +1,6 @@
 {% set page_name = 'Главная' %}
 
-{% extends "layouts/main.layout.html" %} 
+{% extends "layouts/index.layout.html" %} 
 
 {% block content %}
 
