--- a/templates/pages/payment.html
+++ b/templates/pages/payment.html
@@ -6,7 +6,7 @@
 
 <!-- Оплата начало -->
 
-<div class="container text_content_container info_pages_text">
+<div class="container text_content_container info_pages_text min_height">
     <p>Вы можете оплатить ваш заказ онлайн банковской картой на сайте.</p>
     <p>К оплате принимаются все виды платёжных карточек МИР, а также VISA и MasterCard.</p>
     <p>Для оплаты банковской картой вам понадобится следующая информация:</p>
