--- a/templates/pages/refund.html
+++ b/templates/pages/refund.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <!-- Возврат начало -->
-<div class="container text_content_container info_pages_text">
+<div class="container text_content_container info_pages_text min_height">
     <p>Заказы, приобретенные в фирменном розничном магазине, можно вернуть в магазин.</p>
     <p>Заказы, доставленные курьером, возвращаются на основании заявления на возврат....</p>
     <div class="div">
