--- a/templates/partials/subscribe.html
+++ b/templates/partials/subscribe.html
@@ -1,6 +1,6 @@
 <!-- Блок подписки начало-->
 
-<div class="subscribe">
+<div class="container subscribe">
 
     <div class="subscribe__section_form">
         <form method="GET" action="#" class="subscribe_form">
