--- a/templates/partials/catalog_closed_filters_panel+active.html
+++ b/templates/partials/catalog_closed_filters_panel+active.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="sorting">
-            <a href="#" class="main_text_title">сортировать по</a>
+            <a href="#" class="main_text uppercase">сортировать по</a>
             <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M5.83335 8.3335L10 12.5002L14.1667 8.3335" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
